- Added support for http authentication.   Can be configured in config file /etc/nss_http.conf - Optimized logging

--- a/conf/nss_http.conf
+++ b/conf/nss_http.conf
@@ -1,6 +1,12 @@
 # rest url
 HTTPSERVER=https://<API_SERVER>/api/nss
 
+# http basic authentication user name
+HTTPUSER=username
+
+# http basic authentication password
+HTTPPASSWORD=password
+
 # debug mode
 #DEBUG=true
 
